# sumClasses

./: CMakeCache.txt  CMakeLists.txt  README.md  in.txt  main.cpp  person.hpp  student.hpp  sumClassesConfig.hpp  sumClassesConfig.hpp.in
studentFunctions/: CMakeLists.txt  displayStudents.cpp  studentFunctions.hpp
